--- a/src/main/webapp/pharmacy/pharmacy_adjustment_department_by_item.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_adjustment_department_by_item.xhtml
@@ -39,7 +39,7 @@
                                     </p:inputText>
                                     <h:outputLabel value="Comment" />
                                     <p:inputTextarea value="#{pharmacyAdjustmentController.comment}" />
-                                    <h:outputLabel value="Comment" />
+                                    <h:outputLabel value="Manual Adjustment" />
                                     <p:selectBooleanCheckbox value="#{pharmacyAdjustmentController.manualAdjust}" >
                                         <f:ajax event="change" execute="@this" render="det input" />
                                     </p:selectBooleanCheckbox>
