--- a/src/main/webapp/qbReports/report_qb_item_list.xhtml
+++ b/src/main/webapp/qbReports/report_qb_item_list.xhtml
@@ -74,7 +74,7 @@
                     <p:column>
                         <p:outputLabel value="" />
                     </p:column>
-                    <p:column>
+                    <p:column sortBy="#{i.category.description}">
                         <p:outputLabel value="#{i.category.description}" />
                     </p:column>
                 </p:dataTable>
