--- a/src/main/webapp/store/store_reports_index.xhtml
+++ b/src/main/webapp/store/store_reports_index.xhtml
@@ -66,6 +66,7 @@
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" value="Before Stock Taking Report" action="store_report_before_stock_taking" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="After Stock Taking Report" action="store_report_after_stock_taking" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Stock Taking Report(New)" action="store_report_adjustment_bill_for_stock_taking" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
 
