--- a/src/main/webapp/resources/inward/bill/finalBill.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalBill.xhtml
@@ -195,7 +195,7 @@
                                                     </ui:repeat>   
                                                 </table>
                                             </h:panelGroup>
-                                            <h:panelGroup>
+                                            <h:panelGroup rendered="sessionController.userPreference.applicationInstitution ne 'Ruhuna'">
                                                 <table>                                               
                                                     <ui:repeat value="#{bip.billFees}" var="fe">
                                                         <h:panelGroup >
@@ -323,7 +323,7 @@
                         </h:panelGroup>
 
 
-                        <h:panelGroup >
+                        <h:panelGroup rendered="#{sessionController.userPreference.applicationInstitution ne 'Ruhuna'}">
                             <!--                            PAID AMOUNT-->
                             <tr>
                                 <td style="text-align: left;font-size: 13px!important;font-weight: bold!important;">
@@ -364,7 +364,7 @@
 
                         </h:panelGroup>
 
-                        <h:panelGroup >
+                        <h:panelGroup rendered="#{sessionController.userPreference.applicationInstitution ne 'Ruhuna'}" >
                             <!--DUE AMOUNT-->
                             <tr>
                                 <td style="text-align: left;font-size: 13px!important;font-weight: bold!important;">
@@ -399,6 +399,22 @@
 
 
                 </div>
+<!--                <div style="position: absolute;
+                     left: 0%;
+                     bottom:  3%;                                                              
+                     font-size:10px!important;" rendered="#{sessionController.userPreference.applicationInstitution eq 'Ruhuna'}" >
+                    <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.paidAmount+cc.attrs.bill.patientEncounter.creditPaidAmount}" >
+                        <f:convertNumber pattern="******0.00" />
+                    </h:outputLabel>
+                </div>
+                <div style="position: absolute;
+                     left: 50%;
+                     bottom:  3%;
+                     font-size:10px!important;" rendered="#{sessionController.userPreference.applicationInstitution eq 'Ruhuna'}" >
+                    <h:outputLabel  value="#{cc.attrs.bill.paidAmount+cc.attrs.bill.patientEncounter.creditPaidAmount}" rendered="#{cc.attrs.bill.paidAmount !=0}" >
+                        <f:convertNumber pattern="******0.00" />
+                    </h:outputLabel>
+                </div>-->
 
 
             </p:panel>
